// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spinner/SpinnerPresenter renders with custom className 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
}

.emotion-4 {
  height: calc(36px - 2px);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc((36px - 2px) / 2);
  outline: none;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.emotion-1:first-of-type {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:hover svg * {
  fill: #666666;
}

.emotion-1:active svg * {
  fill: #3c3c3c;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

<div
  className="emotion-5 custom__spinner-wrapper"
>
  <div
    className="emotion-4 custom__box-wrapper"
  >
    <span
      className="emotion-1 custom__spinner"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="custom__spinner-icon-up emotion-0"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-1 custom__spinner"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="custom__spinner-icon-down emotion-2"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`spinner/SpinnerPresenter renders with custom stylesheet 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
}

.emotion-4 {
  height: calc(36px - 2px);
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc((36px - 2px) / 2);
  outline: none;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  background-color: pink;
}

.emotion-1:first-of-type {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:hover svg * {
  fill: #666666;
}

.emotion-1:active svg * {
  fill: #3c3c3c;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-0"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-2"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`spinner/SpinnerPresenter renders with disabled 1`] = `
.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: default;
}

.emotion-4 {
  height: calc(36px - 2px);
  opacity: 0.4;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc((36px - 2px) / 2);
  outline: none;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.emotion-1:first-of-type {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:hover svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: rgba(102,102,102,0.7);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-0"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-2"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`spinner/SpinnerPresenter renders with variant 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc((36px - 2px) / 2);
  outline: none;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.emotion-1:first-of-type {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:hover svg * {
  fill: #666666;
}

.emotion-1:active svg * {
  fill: #3c3c3c;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
  width: 35px;
  right: 0px;
  height: 100%;
}

.emotion-4 {
  height: 36px;
  z-index: -2;
  border-left-style: solid;
  border-left-color: rgba(60,60,60,0.1);
  border-left-width: 1px;
  margin-top: 1px;
  margin-bottom: 1px;
  margin-right: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-0"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-2"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`spinner/SpinnerPresenter renders without props 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
}

.emotion-4 {
  height: calc(36px - 2px);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc((36px - 2px) / 2);
  outline: none;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.emotion-1:first-of-type {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:hover svg * {
  fill: #666666;
}

.emotion-1:active svg * {
  fill: #3c3c3c;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-0"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-1"
      onClick={undefined}
      onKeyDown={undefined}
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      role="button"
      tabIndex="-1"
    >
      <svg
        className="emotion-2"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
        />
      </svg>
    </span>
  </div>
</div>
`;
